# mkts-backend-staging

./: .env.example  .gitignore  .wcmkt_state_results.json  AGENTS.md  ESI_OAUTH_FLOW.py  README.md  advanced_market_intel.py  analysis.py  async_history.py  bkg.txt  bootstrap_vsj.py  coalition_analytics.py  config.py  data_processing.py  dbdel.sh  dbdeltest.sh  dbhandler.py  dbrefresh.sh  doctrine_update_feature.md  esi_requests.py  fix_null_timestamps.py  fix_null_timestamps.sql  google_sheets_utils.py  history.py  jita.py  logging_config.py  main.py  mergebackenddbs.md  models.py  nakah.py  parse_fits.py  proj_config.py  pyproject.toml  run_coalition_analytics.py  sde_info.db  temp_mkt.md  test_fetch_region_history.py  test_region_history.py  update_sheets.py  utils.py  (+2 more)
advanced_intel_output/: discord_intel_summary.txt  strategic_intelligence_report.txt
coalition_analytics_output/: discord_summary.txt
config/: config.py  esi_config.py  gsheets_config.py  logging_config.py
db/: db_handlers.py  db_queries.py  models.py
docs/: GITHUB_ACTIONS_SETUP.md  cli-tools.md  colored_logging.md  doctrine_update_feature.md  turso-subquery-materialization.md
esi/: async_history.py  esi_auth.py  esi_requests.py
examples/: gsheets_example.py
fits/: crusader.txt  vexor.txt
processing/: data_processing.py
scripts/: backfill_doctrine_group_category_ids.py  migrate_updatelog_pk.py  repair_prod_schema.py  seed_new_market.py  wipe_gha_db_cache.sh
tests/: conftest.py  test_async_everref.py  test_build_watchlist_cli.py  test_buildcost_runner.py  test_buildcost_updatelog.py  (+14 more)
(+54 files in other folders)
