[project]
name = "mkts-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "libsql-experimental>=0.0.50",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-orm>=1.2.10",
]
